--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "typescript": "^4.1.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -29,7 +29,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -43,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^10.3.1",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
